--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,78 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+
+# LangGraph
+.langgraph_api/
+
+# Byte-compiled / cache / logs
+__pycache__/
+*.py[cod]
+*.pyo
+*.log
+
+# Virtual envs
+venv/
+env/
+ENV/
+.venv/
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Editor settings
+.vscode/
+.idea/
+*.swp
+
+# Environment variables / config
+*.env
+.env.*
+
+# Docker
+# Ignore local DB/storage, but not Dockerfiles or docker-compose.yaml
+docker-compose.override.yml
+*.pid
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+
+# Python test output
+htmlcov/
+.coverage
+.tox/
+.nox/
+
+# Node (if you use React/Vue in ui/)
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# ChromaDB, DBs, etc (if applicable)
+chroma_db/
+*.db
+*.sqlite
+
+# Compiled UI (if using frameworks that build static files)
+ui/dist/
+ui/build/
+ui/.next/
+ui/out/
+
+# VSCode devcontainer (optional)
+.devcontainer/
+
+# Optional: Ignore files/folders generated at runtime
+*.log
+*.tmp
+tmp/
+
