--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,31 @@
 services:
-  app:
-    build: .
-    volumes:
-      - ./src:/app
-    ports:
-      - "5000:5000"
+
+  mlflow:
+    image: ghcr.io/mlflow/mlflow:v2.12.1
+    container_name: mlflow-server
     environment:
-      - ENV=development
+      - MLFLOW_TRACKING_URI=http://0.0.0.0:5000
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./mlruns:/mlflow/mlruns
+    command: mlflow server --backend-store-uri /mlflow/mlruns --host 0.0.0.0 --port 5000
+
+  trainer:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: titanic-trainer
+    depends_on:
+      - mlflow
+    environment:
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+    volumes:
+      - .:/app
+    command: python src/main.py
